--- a/views/contact.gohtml
+++ b/views/contact.gohtml
@@ -1,9 +1,11 @@
-<h1>Get in touch!</h1>
-<p>
-    To get in touch, pleese send an email to
-    <a href="mailto:support@gophergram.com">
-        support@gophergram.com
-    </a>
-</p>
+{{define "yeild"}} 
+    <h1>Get in touch!</h1>
+    <p>
+        To get in touch, pleese send an email to
+        <a href="mailto:support@gophergram.com">
+            support@gophergram.com
+        </a>
+    </p>
 
-{{ template "footer" . }}
+    {{template "footer" .}}
+{{end}}
