--- a/views/layouts/base.gohtml
+++ b/views/layouts/base.gohtml
@@ -12,6 +12,7 @@
         {{template "navbar"}}
         <div class="container">
             {{template "yeild" .}}
+            {{template "footer" .}}
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
         </script>
