--- a/views/layouts/footer.gohtml
+++ b/views/layouts/footer.gohtml
@@ -1,5 +1,6 @@
 {{ define "footer" }}
     <footer>
         <p>Copyright 2018 Gogram.com</p>
+        <p><a href="/faq">FAQ</a></p>
     </footer>
 {{ end }}
