--- a/views/layouts/footer.gohtml
+++ b/views/layouts/footer.gohtml
@@ -1,6 +1,8 @@
 {{ define "footer" }}
-    <footer>
-        <p>Copyright 2018 Gogram.com</p>
-        <p><a href="/faq">FAQ</a></p>
-    </footer>
+    <div class=" container footer navbar-fixed-bottom">
+        <footer>
+            <p>Copyright 2018 Gogram.com</p>
+            <p><a href="/faq">FAQ</a></p>
+        </footer>
+    </div>
 {{ end }}
