Move contact to the footer

--- a/views/layouts/footer.gohtml
+++ b/views/layouts/footer.gohtml
@@ -1,8 +1,15 @@
-{{ define "footer" }}
+{{define "footer"}}
     <div class=" container footer navbar-fixed-bottom">
-        <footer>
-            <p>Copyright 2018 Gogram.com</p>
-            <p><a href="/faq">FAQ</a></p>
+        <footer id="footer">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div>
+                        <a href="/faq">FAQ</a>
+                        <a href="/contact">Contact</a>
+                    </div>
+                    <p>Copyright 2018 Gogram.com</p>
+                </div>    
+            </div>
         </footer>
     </div>
-{{ end }}
+{{end}}
