--- a/views/layouts/base.gohtml
+++ b/views/layouts/base.gohtml
@@ -11,7 +11,7 @@
     <body>
         {{template "navbar"}}
         <div class="container">
-            {{template "yeild" .}}
+            {{template "yield" .}}
             {{template "footer" .}}
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
