--- a/views/layouts/navbar.gohtml
+++ b/views/layouts/navbar.gohtml
@@ -12,6 +12,11 @@
                 </button>
                 <a class="navbar-brand" href="/">Gogram</a>
             </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/signup">Sign Up</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
 {{end}}
