--- a/views/users/signupForm.gohtml
+++ b/views/users/signupForm.gohtml
@@ -1,5 +1,5 @@
 {{define "signupForm"}}
-<form>
+<form action="/signup" method="POST">
   <div class="form-group">
     <label for="email">Email address</label>
     <input type="email" class="form-control" name="email"
