--- a/views/users/signupForm.gohtml
+++ b/views/users/signupForm.gohtml
@@ -1,5 +1,10 @@
 {{define "signupForm"}}
 <form action="/signup" method="POST">
+<div class="form-group">
+    <label for="name">Name</label>
+    <input type="text" class="form-control" name="name"
+      id="name" placeholder="Full Name">
+  </div>
   <div class="form-group">
     <label for="email">Email address</label>
     <input type="email" class="form-control" name="email"
