--- a/views/layouts/navbar.gohtml
+++ b/views/layouts/navbar.gohtml
@@ -14,6 +14,9 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/login">Login</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
                     <li><a href="/signup">Sign Up</a></li>
                 </ul>
             </div>
